[package]
name = "bplustreedb"
description = "An embedded single-file database for Rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.13.0"
bytes = { version = "1.4.0", features = ["serde"] }
fs2 = "0.4.3"
libc = "0.2.144"
memmap2 = "0.6.1"
page_size = "0.5.0"
sha3 = "0.10.8"

